# ODUSSEAS

./: .gitignore  HARPS_dataset.py  LICENSE  MachineLearning.py  Mdwarfs.py  New_data.py  New_data_withrv.py  New_dataset.py  New_dataset_withrv.py  NoConvo_New_dataset.py  ODUSSEAS.py  README.md  Unknown_dataset.py  advanced_123.py  advanced_56.py  advanced_alex_ml.py  build_pew.py  build_pew_verygeneral.py  conv110000_goodEWPar.csv  conv115000_goodEWPar.csv  conv75000_goodEWPar.csv  conv94600_goodEWPar.csv  machinelearning.py  pyproject.toml  requirements.txt  res110000_InterferometryRefEWPar.csv  res110000_RefEWPar.csv  res110000_interferometryRefEWPar.csv  res115000_InterferometryRefEWPar.csv  res115000_RefEWPar.csv  res115000_interferometryRefEWPar.csv  res48000_RefEWPar.csv  res48000_goodEWPar.csv  res48000_interferometryRefEWPar.csv  res75000_InterferometryRefEWPar.csv  res75000_RefEWPar.csv  res75000_interferometryRefEWPar.csv  res94600_InterferometryRefEWPar.csv  res94600_interferometryRefEWPar.csv  res94600_photometryRefEWPar.csv  (+1 more)
reference_data/: res110000_photometryRefEWPar.csv  res75000_photometryRefEWPar.csv
spectra/newstars/: FEROS_GJ1061.fits  FEROS_Gl674.fits  HARPS_GJ163.fits  HARPS_GJ3470.fits  HARPS_Gl643.fits  SOPHIE_Gl908.fits  UVES_Gl402.fits  UVES_Gl701.fits  UVES_Gl846.fits
src/odusseas/: build_pew.py  lines.rdb  machinelearning.py  main.py  spec_utils.py  utils.py
src/odusseas/examples/: HARPS.py
src/odusseas/reference_data/: res110000_interferometryRefEWPar.csv  res115000_interferometryRefEWPar.csv  res75000_interferometryRefEWPar.csv
